<resources>
    <string name="app_name">App_Music</string>
    <string name="nav_home">Home</string>
    <string name="nav_singer">Quản lý ca sĩ</string>
    <string name="nav_author">Quản lý tác giả</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_account">Account</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_change_password">Change Password</string>
    <string name="nav_change_logout">Đăng xuất</string>
    <string name="qlAccount">Quản lý tài khoản</string>

    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="mobno">Mobile No.</string>
    <string name="reg_no">Reg</string>
    <string name="dialog_message">Bạn có chắn chắn muốn đăng xuất</string>
    <string name="dialog_title">Đăng xuất</string>
    <string name="dialog_agree">Đồng ý</string>
    <string name="dialog_cancel">Huỷ bỏ</string>
    <string name="dialog_signIn">Đối mật khẩu</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>

</resources>