<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_singer"
            android:icon="@drawable/singer"
            android:title="@string/nav_singer" />
        <item
            android:id="@+id/nav_author"
            android:icon="@drawable/writer"
            android:title="@string/nav_author" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_baseline_manage_accounts_24"
            android:title="@string/qlAccount" />
    </group>

    <item android:title="@string/nav_account">
        <menu>
            <item
                android:id="@+id/nav_my_profile"
                android:icon="@drawable/user"
                android:title="@string/nav_my_profile" />

            <item
                android:id="@+id/nav_change_password"
                android:icon="@drawable/padlock"
                android:title="@string/nav_change_password" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_logout_24"
                android:title="@string/nav_change_logout" />
        </menu>
    </item>


</menu>